--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Objects</title>
   </head>
   <body>
-    <div id="game"></div>
-    <script src="script.js"></script>
+  <button onclick="start()" id="play">PlayGame</button>
+  <div id="game"></div>
+  <script src="script.js"></script>
   </body>
 </html>
